--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,13 @@
 Flask==3.0.3
 geopy==2.4.1
+urllib3==2.2.2
+numpy==2.0.0
+pandas==2.2.2
+plotly==5.22.0
+kaleido==0.2.1
+opencv-python==4.10.0.84
+ultralytics==8.2.48
+matplotlib==3.9.0
+DateTime==5.5
+nbformat==5.10.4
+python-math==0.0.1
